--- a/main.css
+++ b/main.css
@@ -26,16 +26,17 @@ header a {
     margin-right: 25px;
 }
 
-button {
+button:hover {
     font-family: 'Raleway', sans-serif;
     font-size: 15px;
     color: #fff;
-    background-color: #23a030;
+    background-color: #f6980c;
     border: none;
     border-radius: 15px;
     cursor: pointer;
-    box-shadow: 0 16px 36px rgb(52, 213, 68 / 22%);
+    box-shadow: 0 16px 36px rgba(246 152 12/20%);
     padding: 15px;
+    transition: ease-in 0.3s;
 }
 
 .about__image {
@@ -78,4 +79,113 @@ button {
 
 .about__info {
     max-width: 550px;
+}
+
+.form__container {
+    width: 550px;
+}
+
+.form {
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px;
+    padding-bottom: 115px;
+    text-align: center;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+
+.form h1 {
+    font-size: 48px;
+}
+
+.form p {
+    font-size: 18px;
+    opacity: 0.65;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.form__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.form form {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+
+.form label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.form input {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px 0 20px;
+    border-radius: 15px;
+    border: none;
+}
+
+.form select {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px 0 20px;
+    border-radius: 15px;
+    border: none;
+}
+
+.form__submit {
+    font-size: 18px;
+    font-weight: 600;
+    margin: 40px;
+}
+
+select {
+    appearance: none;
+}
+
+footer {
+    padding: 90px 20px 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.footer__container {
+    display: flex;
+    justify-content: center;
+}
+
+.footer__copyright {
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
+}
+
+.footer__group {
+    margin-right: 80px;
+}
+
+h3 {
+    font-size: 16px;
+    opacity: 0.7;
+    padding-bottom: 30px;
+}
+
+.footer__links a {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
 }
