Пятая версия проекта

--- a/main.css
+++ b/main.css
@@ -70,6 +70,14 @@ button:hover {
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
+    position: relative;
+}
+
+.orb-canvas {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    right: 0;
 }
 
 .about h1 {
