Восьмая версия проекта

--- a/main.css
+++ b/main.css
@@ -9,10 +9,19 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    position: sticky;
-    background-color: white;
+    position: fixed;
+
+    left: 0;
+    right: 0;
+    transition: box-shadow, background-color .25s ease;
+    background-color: white, 0;
     top: 0;
     z-index: 1;
+}
+
+.header__scrolled {
+    background-color: white;
+    box-shadow: 0 12px 34px -11px rgb(65 62 101 / 10%);
 }
 
 .header__logo {
@@ -65,7 +74,7 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding-top: 115px;
+    padding-top: 200px;
     padding-bottom: 115px;
     background: url('img/back.png') no-repeat;
     background-position: center;
